# RustOpenStreetMap

./: .gitignore  Cargo.toml  README.md
doc/: __latexindent_temp.tex  main.blg  main.tex
src/: a_star.rs  bounds.rs  compact_array.rs  main.rs  osm_parser.rs  params.rs  utils.rs
src/bidirectional/: bi_astar.rs  middleman.rs  mod.rs  path_constructor.rs
