[package]
name = "ai_osm"
version = "0.1.0"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
rand = "0.7.3"
csv = "1.1"
plotters = "^0.3.0"
palette = "0.5.0"
byteorder = "1.3.4"
rayon = "1.5.0"
statrs = "0.16.0"
